# swefvm

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/SotAMiH/core/: simulation.py
src/SotAMiH/methods/riemann_solvers/: __init__.py  base.py
src/SotAMiH/methods/spatial/: MUSCL.py  __init__.py  first_order.py
src/SotAMiH/methods/temporal/: __init__.py  base.py  range_kutta.py
src/SotAMiH/physics/: base.py
src/SotAMiH/utils/: io.py  plot.py
src/swefvm/core/: __init__.py  boundaries.py  mesh.py  simulation.py
src/swefvm/methods/riemann_solvers/: base.py  hll.py  oshersolomon.py
src/swefvm/methods/spatial/: MUSCL.py  __init__.py  base.py  first_order.py
src/swefvm/methods/temporal/: __init__.py  base.py  first_order.py  range_kutta.py  runge_kutta.py
src/swefvm/physics/: __init__.py  base.py  shallow_water.py
src/swefvm/utils/: io.py  plot.py
tests/: conftest.py  test_boundaries.py  test_io.py  test_mesh.py  test_physics.py  test_riemann.py  test_simulation.py  test_spatial.py  test_temporal.py
