[project]
name = "swefvm"
version = "0.0.1"
description = "A python module that implements multiple components of Finite Volume Methods for the Shallow Water Equations "
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Ellis Sinclair-kent", email = "ellissinclairkent@gmail.com" }
]
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
